# cs2-surftimer

./: .gitignore  .gitmodules  Class1.cs  README.md  Utils.cs  WST.csproj  Workshop.cs  autoupdate.txt  autoupdate_scripts.txt  autoupdate_zones.txt  cssharp.sln  docker-compose.yaml  local_build.ps1  schema.sql  server.json
Commands/: AdminCommands.cs  HudCommands.cs  SavelocCommands.cs  SurfGameplayCommands.cs  SurfStatsCommands.cs  UtilCommands.cs  VIPCommands.cs
Components/: MapZonesComponent.cs  PlayerComponent.cs  PlayerReplayComponent.cs  PlayerTimerComponent.cs
Game/: SchemaString.cs
Infrastructure/: Database.cs  Entity.cs  EntityManager.cs  EventManager.cs  System.cs
Models/: Checkpoint.cs  GlobalCfg.cs  MapCfg.cs  RecentRecords.cs  Record.cs  Replay.cs  Server.cs  SkillGroups.cs  V_Player.cs  V_RankedRecord.cs  V_Replay.cs
Properties/: launchSettings.json
Systems/: AdvertisingSystem.cs  CheckpointZoneSystem.cs  ClanTagSystem.cs  ConnectionSystem.cs  DiscordSystem.cs  EndZoneSystem.cs  HSWSurfSystem.cs  HookSystem.cs  HudSystem.cs  MapLoadSystem.cs  PlaytimeSystem.cs  ReplayPlaybackSystem.cs  ReplayRecorderSystem.cs  ServerSystem.cs  SidewaysSurfSystem.cs  (+2 more)
metamod/: AMBuildScript  AMBuilder  CMakeLists.txt  README.md  configure.py  local_build.ps1
metamod/src/: autoupdater.cpp  autoupdater.h  lua_file.cpp  lua_file.h  script_or_zone_file.cpp  script_or_zone_file.h  wst.cpp  wst.h
metamod/src/core/: cbaseentity.h  common.h  dlinfo.cpp  dlinfo.h  framework.h  module.h  schemasystem.cpp  schemasystem.h  virtual.h  whereami.cpp  whereami.h
(+35 files in other folders)
